add client registration