@@ -1,28 +1,13 @@
 package com.spareparts.store.service.util.validation.rules;
 
-public class BlankRule implements ValidationRule<String> {
-
-    private final String message;
-
-    public BlankRule() {
-
-        message =  "Must not be blank.";
-    }
-
+public class BlankRule extends BaseRule<String> {
     public BlankRule(String message) {
-
-        this.message = message;
+        super(message);
     }
 
     @Override
     public boolean validate(String value) {
-
-        return value != null && !value.isBlank();
+        return value != null && !value.trim().isEmpty();
     }
 
-    @Override
-    public String getMessage() {
-
-        return message;
-    }
 }
